Feito btn Limpar jscrollpane
spItensP

--- a/2024_ADS_TopEsp/src/visao/TelaRestaurante.form
+++ b/2024_ADS_TopEsp/src/visao/TelaRestaurante.form
@@ -68,7 +68,7 @@
         <Container class="javax.swing.JPanel" name="pCabecalho">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="cc" red="ff" type="rgb"/>
+              <Color blue="66" green="ff" red="ff" type="rgb"/>
             </Property>
           </Properties>
 
@@ -125,7 +125,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="48" style="1"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Restaurante do JAPA"/>
+                <Property name="text" type="java.lang.String" value="Dog&#xe3;o do Gab"/>
               </Properties>
             </Component>
           </SubComponents>
@@ -881,6 +881,7 @@
                                       </Group>
                                       <Component id="btnAdicionar" alignment="1" pref="78" max="32767" attributes="0"/>
                                       <Component id="btnRemover" alignment="1" max="32767" attributes="0"/>
+                                      <Component id="btnLimpar" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -924,26 +925,26 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="spProdutos" pref="0" max="32767" attributes="0"/>
-                                      <Group type="102" attributes="0">
+                                      <Group type="102" alignment="0" attributes="0">
                                           <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                                           <Component id="btnAdicionar" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Component id="lblIconAddRem" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Component id="btnRemover" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace min="0" pref="137" max="32767" attributes="0"/>
+                                          <EmptySpace pref="65" max="32767" attributes="0"/>
+                                          <Component id="btnLimpar" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
-                              <Group type="102" attributes="0">
-                                  <Component id="spItensP" pref="0" max="32767" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="btnSalvarPedido" max="32767" attributes="0"/>
-                                      <Component id="lblValorTNovoP" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="tfValorTNovoP" alignment="0" max="32767" attributes="0"/>
-                                  </Group>
-                              </Group>
+                              <Component id="spItensP" pref="0" max="32767" attributes="0"/>
+                          </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="btnSalvarPedido" max="32767" attributes="0"/>
+                              <Component id="lblValorTNovoP" alignment="0" max="32767" attributes="0"/>
+                              <Component id="tfValorTNovoP" alignment="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
@@ -1166,6 +1167,19 @@
                     <Property name="editable" type="boolean" value="false"/>
                     <Property name="text" type="java.lang.String" value="0.00"/>
                   </Properties>
+                </Component>
+                <Component class="javax.swing.JButton" name="btnLimpar">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Limpar"/>
+                    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                      <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
+                        <BevelBorder/>
+                      </Border>
+                    </Property>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLimparActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
